<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">AndroidLoginAndRegistration</string>

    <!--Global Default Strings-->
    <string name="website">https://pt.wikipedia.org/wiki/Red</string>
    <string name="helpPage">https://pt.wikipedia.org/wiki/Blue</string>
    <string name="about_body">[Nome do app] [Versão]\n[Data]\n\n[Empresa]\n[Autor]\n\n[Tipo de licença]</string>
    <string name="about_copyright">[Copyright]</string>
    <string name="channel1_name">Channel 1</string>
    <string name="channel2_name">Channel 2</string>
    <string name="channel3_name">Channel 3</string>
    <string name="channel4_name">Channel 4</string>
    <string name="channel5_name">Channel 5</string>
    <string name="color1Index">0</string>
    <string name="color2Index">1</string>
    <string name="color3Index">2</string>
    <string name="color4Index">3</string>
    <string name="color5Index">4</string>
    <string name="login_data_file">4</string>
    <string name="network_id_tag">CREELED</string>

    <!--Messages-->
    <string name="RatingThanksMsg">Thank you for your rating. Your opinion will help us to get even better!</string>
    <!--Error Messages-->
    <string name="RegisteredDeviceRemoveNullCodeError">There was an error about your device code. Try again.</string>
    <string name="RegisteredDeviceEditNullCodeError">There was an error about your device. Try again.</string>
    <string name="login_data_error_msg">There was an error with your account information. Please, login again.</string>

    <!--Server-->
    <string name="server_get_user_info">http://192.168.25.61/CreeLed/GetUserInfo.php</string>
    <string name="server_register_new_user">http://192.168.25.61/CreeLed/RegisterNewUser.php</string>
    <string name="server_get_temp_status">http://192.168.25.61/CreeLed/GetTempStatus.php</string>
    <string name="server_set_temp_data">http://192.168.25.61/CreeLed/SetTempData.php</string>
    <string name="server_get_aquarium_data">http://192.168.25.61/CreeLed/GetAquariumData.php</string>
    <string name="server_get_device_data">http://192.168.25.61/CreeLed/GetDeviceData.php</string>
    <string name="server_get_registered_device_list">http://192.168.25.61/CreeLed/GetRegisteredDeviceList.php</string>
    <string name="server_insert_device_to_aquarium">http://192.168.25.61/CreeLed/InsertDeviceToAquarium.php</string>
    <string name="server_remove_device_from_aquarium">http://192.168.25.61/CreeLed/RemoveDeviceFromAquarium.php</string>

    <!--Light Default Mode Strings-->
    <string name="FreeMode">FreeMode</string>
    <string name="MoonMode">MoonMode</string>
    <string name="LocationMode">LocationMode</string>
    <string name="SeasonMode">SeasonMode</string>
    <string name="RoutineMode">RoutineMode</string>
    <string name="RandomMode">RandomMode</string>

    <!--Light Default Program Strings-->
    <string name="Unset"><![CDATA[<Unset>]]></string>

    <!--Light Cloud Screen Strings-->
    <string name="light_cloud_button_text">Cloud It!</string>

    <!--Light Thunder Screen Strings-->
    <string name="light_thunder_button_text">Thunder!</string>

    <!--Temperature Screen Strings-->
    <string name="temperature_screen_minTemp">Min. Temperature [ºC]:</string>
    <string name="temperature_screen_maxTemp">Max. Temperature [ºC]:</string>
    <string name="temperature_screen_chartLineLabel">Temperature</string>
    <string name="temperature_screen_chartMinLimit">Min. Limit</string>
    <string name="temperature_screen_chartMaxLimit">Max. Limit</string>
    <string name="temperature_screen_dialogTitle">Warning!</string>
    <string name="temperature_screen_dialogMessage">Are you sure you want to submit the changes done?</string>
    <string name="temperature_screen_dialogPositiveButton">Yes</string>
    <string name="temperature_screen_dialogNegativeButton">Cancel</string>
    <string name="temp_empty_field">Please, fill empty fields!</string>

    <!--Settings Menu Strings-->
    <string name="null_selected_aquarium">You have not selected an aquarium yet!</string>

    <!--Settings Light Strings-->
    <string name="settings_light_colorPicker_title">Choose Channel Color</string>
    <string name="settings_light_colorPicker_ok_button">Ok</string>
    <string name="settings_light_colorPicker_cancel_button">Cancel</string>

    <!--My Account Strings-->
    <string name="my_account_account_type">Account Type: </string>
    <string name="my_account_logout">Logout</string>
    <string name="my_account_selected_aquarium">Selected Aquarium: </string>
    <string name="my_account_assembled_aquariums">Assembled Aquariums</string>
    <string name="my_account_registered_devices">Registered Devices</string>

    <!--Registered Devices Remove Strings-->
    <string name="registered_devices_remove_body">Are you sure you want to remove </string>

    <!--Registered Devices Edit Strings-->
    <string name="registered_devices_edit_code_default"><![CDATA[<Default>]]></string>
    <string name="registered_devices_edit_name_label">Name: </string>
    <string name="registered_devices_edit_ssid_label">Wifi SSID: </string>
    <string name="registered_devices_edit_password_label">Wifi Password: </string>

    <!--Rating Strings-->
    <string name="rating_body">Write your opinion about our app ;)</string>

    <!--Login Screen Strings-->
    <string name="login_screen_username">Email</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_register">New to Twitter? Register here</string>
    <string name="login_screen_forgot_password">Forgot your password?</string>
    <string name="login_screen_login">Login</string>
    <string name="login_null_email">The email field is empty!</string>
    <string name="login_null_password">The password field is empty!</string>
    <string name="login_null_non_registered_email">This email is not registered!</string>
    <string name="login_validation_error">Email and/or password doesn\'t match!</string>

    <!--Register Screen Strings-->
    <string name="register_screen_username">Email</string>
    <string name="register_screen_password">Password</string>
    <string name="register_screen_name">Full Name</string>
    <string name="register_screen_button">Register New Account</string>
    <string name="register_screen_has_account">Already has account? Login here</string>
    <string name="reg_empty_field">Please, fill empty fields!</string>
</resources>
