<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="@color/register_screen_background_color">
  		
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@layout/header_gradient"
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip">
  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/logo"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"
  							android:layout_marginLeft="10dip"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends --> 
  		<!-- Footer Start -->
  		<LinearLayout
				android:orientation="horizontal"
				android:id="@+id/footer"
  				android:layout_width="fill_parent"
  				android:layout_height="90dip"
  				android:background="@layout/footer_repeat"
  				android:layout_alignParentBottom="true">
  		</LinearLayout>
  		<!-- Footer Ends --> 
  		
  		<!-- Registration Form -->
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:layout_below="@id/header">
		  <!-- Full Name Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="@color/register_screen_name_textview_color"
		  		android:text="@string/register_screen_name"/>
		  <EditText android:id="@+id/reg_fullname" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:singleLine="true"
                    android:inputType="text"
		  		android:layout_marginBottom="20dip"
              android:textColor="@color/register_screen_name_edittext_color"/>
		  <!--  Email Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="@color/register_screen_user_textview_color"
		  		android:text="@string/register_screen_username"/>
		  <EditText android:id="@+id/reg_email" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:singleLine="true"
		  		android:layout_marginBottom="20dip"
              android:inputType="textEmailAddress"
              android:textColor="@color/register_screen_user_edittext_color"/>
		  <!-- Password Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="@color/register_screen_password_textview_color"
		  		android:text="@string/register_screen_password"/>
		  <EditText android:id="@+id/reg_password" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:inputType="textPassword"
		  		android:singleLine="true"
		  		android:layout_marginTop="5dip"
              android:textColor="@color/register_screen_password_edittext_color"/>
		  <!-- Register Button -->		
		  <Button android:id="@+id/btnRegister"
				  android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="10dip"
				  android:text="@string/register_screen_button"
				  android:background="@color/register_screen_buttonbackground_color"
				  android:textColor="@color/register_screen_buttontext_color"
				  android:onClick="ConnectToDatabase"/>
		  <!-- Link to Login Screen -->
		  <TextView android:id="@+id/link_to_login"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="40dip"
					android:layout_marginBottom="40dip"
					android:text="@string/register_screen_has_account"
					android:gravity="center"
					android:textSize="20dip"
					android:textColor="#025f7c"
					android:onClick="finishActivity"
					android:clickable="true"/>
		    
		</LinearLayout>
  		<!-- Registration Form Ends -->
  		
  		
  </RelativeLayout>
</ScrollView>
